--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "selenium-standalone": "~5.1.0"
   },
   "dependencies": {
-    "lodash": "~4.10.0",
-    "nightwatch": "~0.8.18",
-    "request": "~2.70.0"
+    "nightwatch": "~0.8.18"
   }
 }
